# rust-react-gui

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/: gui.rs  main.rs
