[package]
name = "rust-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.132"
tao = "0.30.5"
url = "2.5.2"
wry = { version = "0.46.3" }

rust-embed = "6.8"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
serde = { version = "1.0.214", features = ["derive"] }
image = "0.25.4"
objc = "0.2.7"
cocoa = "0.26.0"
notify = "7.0.0"
crossbeam-channel = "0.5.13"

